fix: Firefox not being able to edit the json files was due to the user-select: none attribute that was left over from touchpanel templates, removed and now firefox can edit json live feat: Scrollbars now more attractive

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,9 +4,25 @@
     padding: 0;
 
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-    -webkit-user-select: none !important;
     -webkit-touch-callout: none !important;
-    user-select: none;
+    scrollbar-width: thin;
+
+    &::-webkit-scrollbar-track {
+        // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        background-color: #f5f5f5;
+    }
+
+    &::-webkit-scrollbar {
+        width: 6px;
+        background-color: #f5f5f5;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+        background-color: $color-primary;
+    }
 }
 
 body {
